data filtering and selection

--- a/data_preparation/handle_empty_values.ipynb
+++ b/data_preparation/handle_empty_values.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "2dd1cd5d-dafe-4388-8557-e0fc7d320e89",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "3a951b87-5b60-45a6-9abf-6e07351433f0",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "d605a483-5393-4595-a468-295ec12d669a",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
        "5  0.226001 -1.839905  1.607671  0.388292  0.399732  0.405477"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,13 +196,14 @@
    "source": [
     "# emulate a random test dataset of 6 x 6 matrix table\n",
     "np.random.seed(25) # create random numbers seed\n",
+    "# randn - generate numbers with normal (Gaussian) distribution (mean = 0, var = 1)\n",
     "DF_obj = DataFrame(np.random.randn(36).reshape(6,6))\n",
     "DF_obj"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "ede911aa-00e5-4274-a988-ab3d8360bbf1",
    "metadata": {},
    "outputs": [
@@ -304,7 +305,7 @@
        "5       NaN -1.839905  1.607671  0.388292  0.399732  0.405477"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "ac59602c-3314-4f6e-90ad-97042ad40757",
    "metadata": {},
    "outputs": [
@@ -420,7 +421,7 @@
        "5  0.000000 -1.839905  1.607671  0.388292  0.399732  0.405477"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "dbac2d79-2b42-4ce5-8f86-9db8ddc511ef",
    "metadata": {},
    "outputs": [
@@ -536,7 +537,7 @@
        "5  0.100000 -1.839905  1.607671  0.388292  0.399732  0.405477"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "e0a2c477-dbec-4f69-9ce1-3d416706cff2",
    "metadata": {},
    "outputs": [
@@ -562,7 +563,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Neli.Harbuzava\\AppData\\Local\\Temp\\ipykernel_7640\\2086639020.py:3: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\Neli.Harbuzava\\AppData\\Local\\Temp\\ipykernel_15980\\2086639020.py:3: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  fill_DF = DF_obj.fillna(method='ffill')\n"
      ]
     },
@@ -664,7 +665,7 @@
        "5  2.152957 -1.839905  1.607671  0.388292  0.399732  0.405477"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "30e127c3-941d-442a-ada9-4e67c032f6ba",
    "metadata": {},
    "outputs": [
@@ -780,7 +781,7 @@
        "5       NaN -1.839905  1.607671  0.388292  0.399732  0.405477"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "9db1dcc3-3be4-4f3d-9576-e5eb50ce8d6c",
    "metadata": {},
    "outputs": [
@@ -812,7 +813,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,10 +825,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "e2888016-ccb5-415b-a71c-65cf933dadfa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'DF' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# 4st approach - drop all rows with empty values\u001b[39;00m\n\u001b[0;32m      2\u001b[0m DF_no_NAN \u001b[38;5;241m=\u001b[39m DF_obj\u001b[38;5;241m.\u001b[39mdropna()\n\u001b[1;32m----> 3\u001b[0m \u001b[43mDF\u001b[49m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'DF' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# 4st approach - drop all rows with empty values\n",
     "DF_no_NAN = DF_obj.dropna()\n",
